6996: Properly support converters
Reviewed-by: ghb